--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,43 @@
-altgraph==0.17.2
-black==22.3.0
-certifi==2022.12.7
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.5
-future==0.18.2
-idna==3.3
-img2pdf==0.4.4
-lxml==4.9.1
-mypy-extensions==0.4.3
-packaging==21.3
-pathspec==0.9.0
-pefile==2022.5.30
-pikepdf==5.1.5.post1
-Pillow==9.3.0
-platformdirs==2.5.2
-pyinstaller==5.1
-pyinstaller-hooks-contrib==2022.7
-pyparsing==3.0.9
-pywin32-ctypes==0.2.0
-requests==2.28.0
-tomli==2.0.1
-urllib3==1.26.9
+aiofiles==24.1.0
+altgraph==0.17.4
+backports.tarfile==1.2.0
+beautifulsoup4==4.12.3
+black==24.10.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+docutils==0.21.2
+getjump==2.5.0
+idna==3.8
+importlib_metadata==8.5.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+keyring==25.4.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.5.0
+mypy-extensions==1.0.0
+nh3==0.2.18
+packaging==24.1
+pathspec==0.12.1
+pefile==2023.2.7
+pillow==10.4.0
+pkginfo==1.10.0
+platformdirs==4.3.6
+Pygments==2.18.0
+pyinstaller==6.11.0
+pyinstaller-hooks-contrib==2024.9
+pywin32-ctypes==0.2.3
+readme_renderer==44.0
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.8.1
+soupsieve==2.6
+tomli==2.0.2
+twine==5.1.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+zipp==3.20.2
